Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32259

Test from win.test fails with statement memory protection

    XMLWordPrintable

Details

    Description

      The following test case from win.test fails if the server is built with -DWITH_PROTECT_STATEMENT_MEMROOT:BOOL=ON

      prepare stmt from
      "select row_number() over (partition by 4 order by 1+2)";
      execute stmt;
      execute stmt;
      deallocate prepare stmt;
      

      The test case fails with the assertion abort that points to the allocation of list elements for each unnamed window spec at each execution of PS. The allocation is done on the statement memory in the function setup_windows().

      Attachments

        Activity

          People

            igor Igor Babaev (Inactive)
            igor Igor Babaev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 20m
                20m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.